--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sheypoor frontend challenge",
   "main": "sdk/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test"
   },
   "repository": {
     "type": "git",
@@ -15,8 +17,37 @@
   "bugs": {
     "url": "https://github.com/sheypoor/frontend-challenge/issues"
   },
-  "homepage": "https://github.com/sheypoor/frontend-challenge#readme",
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
-    "sdk": "file:sdk"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.0",
+    "react-router-dom": "^6.6.0",
+    "react-scripts": "^5.0.1",
+    "sdk": "file:sdk",
+    "web-vitals": "^3.1.0"
+  },
+  "devDependencies": {
+    "sass": "^1.57.1"
   }
 }
